tests/typing/pass/array/array.act
contract A

constructor()
creates

transition f(address[2] xs) : address
storage

returns xs[1]