tests/typing/fail/array/inconsistent_array_type.act
contract B

constructor()

creates

  bool[3] b := [1, 2, false]
